--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "sass": "^1.74.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
