--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@redux-devtools/extension": "^3.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "leaflet": "^1.9.4",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
