--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@redux-devtools/extension": "^3.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.8",
     "leaflet": "^1.9.4",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
