--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "leaflet": "^1.9.4",
@@ -26,7 +27,6 @@
     "react-hook-form": "^7.51.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
